// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Postgresql DATA MANIPULATION INSERT should insert new entity 1 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 1n,
      "$2" => "TEST1",
      "$3" => 10,
    }
,
    "query": 
"INSERT INTO "Table1One" AS "entity0"("table1Id","name","number") VALUES
	($1,$2,$3)"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION INSERT should insert new entity 2 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 2n,
      "$2" => "TEST2",
      "$3" => 20,
    }
,
    "query": 
"INSERT INTO "Table1One" AS "entity0"("table1Id","name","number") VALUES
	($1,$2,$3)"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION INSERT should insert new entity 3 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 3n,
      "$2" => "TEST3",
      "$3" => 30,
    }
,
    "query": 
"INSERT INTO "Table1One" AS "entity0"("table1Id","name","number") VALUES
	($1,$2,$3)"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION INSERT should insert new entity and update all insert generated column (createdDate, default) 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "INSERT 1",
    }
,
    "query": 
"INSERT INTO "fixture"."Table1s" AS "entity0"("bigint","binary","boolean","date","plainDate","dateTime","instant","decimal","decimalNumber","decimalDecimal","deleted","identifier","identifierString","integer","real","string","time","plainTime") VALUES
	(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,$1,DEFAULT,DEFAULT)
RETURNING "entity0"."id",("entity0"."integer"+"entity0"."decimalNumber") AS "computed","entity0"."createdDate","entity0"."modifiedDate","entity0"."deleted","entity0"."integer""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION INSERT should insert entity with it relation correctly 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 10n,
    }
,
    "query": 
"SELECT "entity0"."id",
	"entity0"."bigint",
	"entity0"."binary",
	"entity0"."boolean",
	"entity0"."date",
	"entity0"."plainDate",
	"entity0"."dateTime",
	"entity0"."instant",
	"entity0"."decimal",
	"entity0"."decimalNumber",
	"entity0"."decimalDecimal",
	"entity0"."deleted",
	"entity0"."identifier",
	"entity0"."identifierString",
	"entity0"."integer",
	"entity0"."real",
	"entity0"."string",
	"entity0"."time",
	"entity0"."plainTime",
	"entity0"."createdDate",
	"entity0"."modifiedDate"
FROM "fixture"."Table1s" AS "entity0"
WHERE (("entity0"."deleted"=false) AND ("entity0"."id"=$1))
ORDER BY "entity0"."id"
FETCH NEXT 1 ROWS ONLY"
,
    "type": 1,
  },
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "$1" => 10n,
      "$2" => "detail 1",
      "$3" => 1,
      "$4" => 10n,
      "$5" => "detail 2",
      "$6" => 2,
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "$1" => 10n,
          "$2" => "detail 1",
          "$3" => 1,
        }
,
        "query": 
"INSERT INTO "Table1Manies" AS "entity0"("table1Id","name","integer","deleted") VALUES
	($1,$2,$3,DEFAULT)
RETURNING "entity0"."id","entity0"."table1Id","entity0"."deleted""
,
        "type": 3,
      },
      {
        "parameters": 
Map {
          "$1" => 10n,
          "$2" => "detail 2",
          "$3" => 2,
        }
,
        "query": 
"INSERT INTO "Table1Manies" AS "entity0"("table1Id","name","integer","deleted") VALUES
	($1,$2,$3,DEFAULT)
RETURNING "entity0"."id","entity0"."table1Id","entity0"."deleted""
,
        "type": 3,
      },
    ],
    "_query": 
"INSERT INTO "Table1Manies" AS "entity0"("table1Id","name","integer","deleted") VALUES
	($1,$2,$3,DEFAULT)
RETURNING "entity0"."id","entity0"."table1Id","entity0"."deleted";

INSERT INTO "Table1Manies" AS "entity0"("table1Id","name","integer","deleted") VALUES
	($4,$5,$6,DEFAULT)
RETURNING "entity0"."id","entity0"."table1Id","entity0"."deleted""
,
    "_type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION INSERT should insert entity with it relation correctly (auto pk) 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "INSERT 1",
    }
,
    "query": 
"INSERT INTO "fixture"."Table1s" AS "entity0"("bigint","binary","boolean","date","plainDate","dateTime","instant","decimal","decimalNumber","decimalDecimal","deleted","identifier","identifierString","integer","real","string","time","plainTime") VALUES
	(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,$1,DEFAULT,DEFAULT)
RETURNING "entity0"."id",("entity0"."integer"+"entity0"."decimalNumber") AS "computed","entity0"."createdDate","entity0"."modifiedDate","entity0"."deleted","entity0"."integer""
,
    "type": 3,
  },
  {
    "parameters": 
Map {
      "$1" => "Insert 2",
    }
,
    "query": 
"INSERT INTO "fixture"."Table1s" AS "entity0"("bigint","binary","boolean","date","plainDate","dateTime","instant","decimal","decimalNumber","decimalDecimal","deleted","identifier","identifierString","integer","real","string","time","plainTime") VALUES
	(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,$1,DEFAULT,DEFAULT)
RETURNING "entity0"."id",("entity0"."integer"+"entity0"."decimalNumber") AS "computed","entity0"."createdDate","entity0"."modifiedDate","entity0"."deleted","entity0"."integer""
,
    "type": 3,
  },
  {
    "parameters": 
Map {
      "$1" => Anything,
      "$2" => "detail 1",
      "$3" => 1,
    }
,
    "query": 
"INSERT INTO "Table1Manies" AS "entity1"("table1Id","name","integer","deleted") VALUES
	($1,$2,$3,DEFAULT)
RETURNING "entity1"."id","entity1"."table1Id","entity1"."deleted""
,
    "type": 3,
  },
  {
    "parameters": 
Map {
      "$1" => Anything,
      "$2" => "detail 2",
      "$3" => 2,
    }
,
    "query": 
"INSERT INTO "Table1Manies" AS "entity1"("table1Id","name","integer","deleted") VALUES
	($1,$2,$3,DEFAULT)
RETURNING "entity1"."id","entity1"."table1Id","entity1"."deleted""
,
    "type": 3,
  },
  {
    "parameters": 
Map {
      "$1" => Anything,
      "$2" => "detail 21",
      "$3" => 2,
    }
,
    "query": 
"INSERT INTO "Table1Manies" AS "entity1"("table1Id","name","integer","deleted") VALUES
	($1,$2,$3,DEFAULT)
RETURNING "entity1"."id","entity1"."table1Id","entity1"."deleted""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION INSERT should trigger before/after save event 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "Insert 1",
    }
,
    "query": 
"INSERT INTO "fixture"."Table1s" AS "entity0"("bigint","binary","boolean","date","plainDate","dateTime","instant","decimal","decimalNumber","decimalDecimal","deleted","identifier","identifierString","integer","real","string","time","plainTime") VALUES
	(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,$1,DEFAULT,DEFAULT)
RETURNING "entity0"."id",("entity0"."integer"+"entity0"."decimalNumber") AS "computed","entity0"."createdDate","entity0"."modifiedDate","entity0"."deleted","entity0"."integer""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION INSERT should bulk insert 1`] = `
[
  {
    "parameters": Map {},
    "query": 
"INSERT INTO "Table1Manies" ("name")
SELECT (CONCAT('Detail of parent ', CAST("entity0"."id" AS text))) AS "column1"
FROM "fixture"."Table1s" AS "entity0"
LEFT JOIN (
	SELECT "entity1"."table1Id",
		COUNT("entity1".*) AS "column0"
	FROM "Table1Manies" AS "entity1"
	WHERE ("entity1"."deleted"=false)
	GROUP BY "entity1"."table1Id"
) AS "entity1" ON ("entity0"."id"="entity1"."table1Id")
WHERE (("entity0"."deleted"=false) AND ((COALESCE("entity1"."column0", 0))<=0))"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION INSERT should bulk insert entity for non auto pk when updating more than 10 entity 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 1n,
      "$2" => "TEST1",
      "$3" => 10,
      "$4" => 2n,
      "$5" => "TEST2",
      "$6" => 20,
      "$7" => 3n,
      "$8" => "TEST3",
      "$9" => 30,
      "$10" => 4n,
      "$11" => "TEST4",
      "$12" => 40,
      "$13" => 5n,
      "$14" => "TEST5",
      "$15" => 50,
      "$16" => 6n,
      "$17" => "TEST6",
      "$18" => 60,
      "$19" => 7n,
      "$20" => "TEST7",
      "$21" => 70,
      "$22" => 8n,
      "$23" => "TEST8",
      "$24" => 80,
      "$25" => 9n,
      "$26" => "TEST9",
      "$27" => 90,
      "$28" => 10n,
      "$29" => "TEST10",
      "$30" => 100,
      "$31" => 11n,
      "$32" => "TEST11",
      "$33" => 110,
    }
,
    "query": 
"INSERT INTO "Table1One" AS "entity0"("table1Id","name","number") VALUES
	($1,$2,$3),
	($4,$5,$6),
	($7,$8,$9),
	($10,$11,$12),
	($13,$14,$15),
	($16,$17,$18),
	($19,$20,$21),
	($22,$23,$24),
	($25,$26,$27),
	($28,$29,$30),
	($31,$32,$33)"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION INSERT should do upsert 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 11,
      "$2" => "Original",
    }
,
    "query": 
"INSERT INTO "fixture"."Table1s" AS "entity0"("bigint","binary","boolean","date","plainDate","dateTime","instant","decimal","decimalNumber","decimalDecimal","deleted","identifier","identifierString","integer","real","string","time","plainTime") VALUES
	(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,$1,DEFAULT,$2,DEFAULT,DEFAULT)
RETURNING "entity0"."id",("entity0"."integer"+"entity0"."decimalNumber") AS "computed","entity0"."createdDate","entity0"."modifiedDate","entity0"."deleted","entity0"."integer""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION INSERT should insert entity with loop type reference 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "$1" => 21n,
      "$2" => 0n,
      "$3" => 22n,
      "$4" => 21n,
      "$5" => 51n,
      "$6" => 54n,
      "$7" => 31n,
      "$8" => 0n,
      "$9" => 33n,
      "$10" => 31n,
      "$11" => 54n,
      "$12" => 52n,
      "$13" => 33n,
      "$14" => 55n,
      "$15" => 51n,
      "$16" => 1n,
      "$17" => 0n,
      "$18" => 2n,
      "$19" => 32n,
      "$20" => 33n,
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "$1" => 21n,
          "$2" => 0n,
        }
,
        "query": 
"INSERT INTO "CycleDigon1" AS "entity0"("id","table1Id","cycleDigon2Id") VALUES
	($1,$2,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "$1" => 22n,
          "$2" => 21n,
        }
,
        "query": 
"INSERT INTO "CycleDigon2" AS "entity1"("id","cycleDigon1Id") VALUES
	($1,$2)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "$1" => 51n,
        }
,
        "query": 
"INSERT INTO "CyclePolygon1" AS "entity2"("id","cyclePolygon2Id") VALUES
	($1,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "$1" => 54n,
        }
,
        "query": 
"INSERT INTO "CyclePolygon4" AS "entity3"("id","cyclePolygon5Id") VALUES
	($1,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "$1" => 31n,
          "$2" => 0n,
        }
,
        "query": 
"INSERT INTO "CycleTriangle1" AS "entity4"("id","table1Id","cycleTriangle2Id") VALUES
	($1,$2,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "$1" => 33n,
          "$2" => 31n,
          "$3" => 54n,
        }
,
        "query": 
"INSERT INTO "CycleTriangle3" AS "entity5"("id","cycleTriangle1Id","cyclePolygon4Id") VALUES
	($1,$2,$3)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "$1" => 52n,
          "$2" => 33n,
        }
,
        "query": 
"INSERT INTO "CyclePolygon2" AS "entity6"("id","cycleTriangle3Id") VALUES
	($1,$2)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "$1" => 55n,
          "$2" => 51n,
        }
,
        "query": 
"INSERT INTO "CyclePolygon5" AS "entity7"("id","cyclePolygon1Id") VALUES
	($1,$2)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "$1" => 1n,
          "$2" => 0n,
          "$3" => 2n,
        }
,
        "query": 
"INSERT INTO "CycleSelf" AS "entity8"("id","table1Id","parentId") VALUES
	($1,$2,DEFAULT),
	($3,DEFAULT,DEFAULT)"
,
        "type": 2,
      },
      {
        "parameters": 
Map {
          "$1" => 32n,
          "$2" => 33n,
        }
,
        "query": 
"INSERT INTO "CycleTriangle2" AS "entity9"("id","cycleTriangle3Id") VALUES
	($1,$2)"
,
        "type": 2,
      },
    ],
    "_query": 
"INSERT INTO "CycleDigon1" AS "entity0"("id","table1Id","cycleDigon2Id") VALUES
	($1,$2,DEFAULT);

INSERT INTO "CycleDigon2" AS "entity1"("id","cycleDigon1Id") VALUES
	($3,$4);

INSERT INTO "CyclePolygon1" AS "entity2"("id","cyclePolygon2Id") VALUES
	($5,DEFAULT);

INSERT INTO "CyclePolygon4" AS "entity3"("id","cyclePolygon5Id") VALUES
	($6,DEFAULT);

INSERT INTO "CycleTriangle1" AS "entity4"("id","table1Id","cycleTriangle2Id") VALUES
	($7,$8,DEFAULT);

INSERT INTO "CycleTriangle3" AS "entity5"("id","cycleTriangle1Id","cyclePolygon4Id") VALUES
	($9,$10,$11);

INSERT INTO "CyclePolygon2" AS "entity6"("id","cycleTriangle3Id") VALUES
	($12,$13);

INSERT INTO "CyclePolygon5" AS "entity7"("id","cyclePolygon1Id") VALUES
	($14,$15);

INSERT INTO "CycleSelf" AS "entity8"("id","table1Id","parentId") VALUES
	($16,$17,DEFAULT),
	($18,DEFAULT,DEFAULT);

INSERT INTO "CycleTriangle2" AS "entity9"("id","cycleTriangle3Id") VALUES
	($19,$20)"
,
    "_type": 2,
  },
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": Map {},
    "_queries": [
      {
        "parameters": Map {},
        "query": 
"UPDATE "CycleSelf" AS "entity10"
SET "parentId" = "update"."parentId"
FROM (
	VALUES
	(1, 2),
	(2, 1)
) AS "update"("_ori_id", "parentId")
WHERE ("entity10"."id"="update"."_ori_id")"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE "CycleTriangle1" AS "entity11"
SET "cycleTriangle2Id" = "update"."cycleTriangle2Id"
FROM (
	VALUES
	(31, 32)
) AS "update"("_ori_id", "cycleTriangle2Id")
WHERE ("entity11"."id"="update"."_ori_id")"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE "CyclePolygon4" AS "entity12"
SET "cyclePolygon5Id" = "update"."cyclePolygon5Id"
FROM (
	VALUES
	(54, 55)
) AS "update"("_ori_id", "cyclePolygon5Id")
WHERE ("entity12"."id"="update"."_ori_id")"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE "CyclePolygon1" AS "entity13"
SET "cyclePolygon2Id" = "update"."cyclePolygon2Id"
FROM (
	VALUES
	(51, 52)
) AS "update"("_ori_id", "cyclePolygon2Id")
WHERE ("entity13"."id"="update"."_ori_id")"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE "CycleDigon1" AS "entity14"
SET "cycleDigon2Id" = "update"."cycleDigon2Id"
FROM (
	VALUES
	(21, 22)
) AS "update"("_ori_id", "cycleDigon2Id")
WHERE ("entity14"."id"="update"."_ori_id")"
,
        "type": 2,
      },
    ],
    "_query": 
"UPDATE "CycleSelf" AS "entity10"
SET "parentId" = "update"."parentId"
FROM (
	VALUES
	(1, 2),
	(2, 1)
) AS "update"("_ori_id", "parentId")
WHERE ("entity10"."id"="update"."_ori_id");

UPDATE "CycleTriangle1" AS "entity11"
SET "cycleTriangle2Id" = "update"."cycleTriangle2Id"
FROM (
	VALUES
	(31, 32)
) AS "update"("_ori_id", "cycleTriangle2Id")
WHERE ("entity11"."id"="update"."_ori_id");

UPDATE "CyclePolygon4" AS "entity12"
SET "cyclePolygon5Id" = "update"."cyclePolygon5Id"
FROM (
	VALUES
	(54, 55)
) AS "update"("_ori_id", "cyclePolygon5Id")
WHERE ("entity12"."id"="update"."_ori_id");

UPDATE "CyclePolygon1" AS "entity13"
SET "cyclePolygon2Id" = "update"."cyclePolygon2Id"
FROM (
	VALUES
	(51, 52)
) AS "update"("_ori_id", "cyclePolygon2Id")
WHERE ("entity13"."id"="update"."_ori_id");

UPDATE "CycleDigon1" AS "entity14"
SET "cycleDigon2Id" = "update"."cycleDigon2Id"
FROM (
	VALUES
	(21, 22)
) AS "update"("_ori_id", "cycleDigon2Id")
WHERE ("entity14"."id"="update"."_ori_id")"
,
    "_type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION INSERT should insert entity with auto pk and self reference nullable 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "$1" => "1",
      "$2" => "2",
      "$3" => "3",
      "$4" => "4",
      "$5" => "5",
      "$6" => "6",
      "$7" => "7",
      "$8" => "8",
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "$1" => "1",
        }
,
        "query": 
"INSERT INTO "CycleSelfAutoNull" AS "entity0"("name","parentId") VALUES
	($1,DEFAULT)
RETURNING "entity0"."id""
,
        "type": 3,
      },
      {
        "parameters": 
Map {
          "$1" => "2",
        }
,
        "query": 
"INSERT INTO "CycleSelfAutoNull" AS "entity0"("name","parentId") VALUES
	($1,DEFAULT)
RETURNING "entity0"."id""
,
        "type": 3,
      },
      {
        "parameters": 
Map {
          "$1" => "3",
        }
,
        "query": 
"INSERT INTO "CycleSelfAutoNull" AS "entity0"("name","parentId") VALUES
	($1,DEFAULT)
RETURNING "entity0"."id""
,
        "type": 3,
      },
      {
        "parameters": 
Map {
          "$1" => "4",
        }
,
        "query": 
"INSERT INTO "CycleSelfAutoNull" AS "entity0"("name","parentId") VALUES
	($1,DEFAULT)
RETURNING "entity0"."id""
,
        "type": 3,
      },
      {
        "parameters": 
Map {
          "$1" => "5",
        }
,
        "query": 
"INSERT INTO "CycleSelfAutoNull" AS "entity0"("name","parentId") VALUES
	($1,DEFAULT)
RETURNING "entity0"."id""
,
        "type": 3,
      },
      {
        "parameters": 
Map {
          "$1" => "6",
        }
,
        "query": 
"INSERT INTO "CycleSelfAutoNull" AS "entity0"("name","parentId") VALUES
	($1,DEFAULT)
RETURNING "entity0"."id""
,
        "type": 3,
      },
      {
        "parameters": 
Map {
          "$1" => "7",
        }
,
        "query": 
"INSERT INTO "CycleSelfAutoNull" AS "entity0"("name","parentId") VALUES
	($1,DEFAULT)
RETURNING "entity0"."id""
,
        "type": 3,
      },
      {
        "parameters": 
Map {
          "$1" => "8",
        }
,
        "query": 
"INSERT INTO "CycleSelfAutoNull" AS "entity0"("name","parentId") VALUES
	($1,DEFAULT)
RETURNING "entity0"."id""
,
        "type": 3,
      },
    ],
    "_query": 
"INSERT INTO "CycleSelfAutoNull" AS "entity0"("name","parentId") VALUES
	($1,DEFAULT)
RETURNING "entity0"."id";

INSERT INTO "CycleSelfAutoNull" AS "entity0"("name","parentId") VALUES
	($2,DEFAULT)
RETURNING "entity0"."id";

INSERT INTO "CycleSelfAutoNull" AS "entity0"("name","parentId") VALUES
	($3,DEFAULT)
RETURNING "entity0"."id";

INSERT INTO "CycleSelfAutoNull" AS "entity0"("name","parentId") VALUES
	($4,DEFAULT)
RETURNING "entity0"."id";

INSERT INTO "CycleSelfAutoNull" AS "entity0"("name","parentId") VALUES
	($5,DEFAULT)
RETURNING "entity0"."id";

INSERT INTO "CycleSelfAutoNull" AS "entity0"("name","parentId") VALUES
	($6,DEFAULT)
RETURNING "entity0"."id";

INSERT INTO "CycleSelfAutoNull" AS "entity0"("name","parentId") VALUES
	($7,DEFAULT)
RETURNING "entity0"."id";

INSERT INTO "CycleSelfAutoNull" AS "entity0"("name","parentId") VALUES
	($8,DEFAULT)
RETURNING "entity0"."id""
,
    "_type": 3,
  },
  {
    "parameters": Map {},
    "query": 
"UPDATE "CycleSelfAutoNull" AS "entity1"
SET "parentId" = "update"."parentId"
FROM (
	VALUES
	(11, 1),
	(12, 11),
	(13, 12),
	(14, 13),
	(15, 12),
	(16, 2),
	(17, 16),
	(18, 16)
) AS "update"("_ori_id", "parentId")
WHERE ("entity1"."id"="update"."_ori_id")"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION INSERT should insert entity with auto pk and self reference 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "$1" => "1",
      "$2" => 1n,
      "$3" => "6",
      "$4" => 2n,
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "$1" => "1",
          "$2" => 1n,
        }
,
        "query": 
"INSERT INTO "CycleSelfAuto" AS "entity0"("table1Id","name","parentId") VALUES
	(DEFAULT,$1,$2)
RETURNING "entity0"."id""
,
        "type": 3,
      },
      {
        "parameters": 
Map {
          "$1" => "6",
          "$2" => 2n,
        }
,
        "query": 
"INSERT INTO "CycleSelfAuto" AS "entity0"("table1Id","name","parentId") VALUES
	(DEFAULT,$1,$2)
RETURNING "entity0"."id""
,
        "type": 3,
      },
    ],
    "_query": 
"INSERT INTO "CycleSelfAuto" AS "entity0"("table1Id","name","parentId") VALUES
	(DEFAULT,$1,$2)
RETURNING "entity0"."id";

INSERT INTO "CycleSelfAuto" AS "entity0"("table1Id","name","parentId") VALUES
	(DEFAULT,$3,$4)
RETURNING "entity0"."id""
,
    "_type": 3,
  },
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "$1" => 11n,
      "$2" => "2",
      "$3" => 16n,
      "$4" => "7",
      "$5" => 16n,
      "$6" => "8",
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "$1" => 11n,
          "$2" => "2",
        }
,
        "query": 
"INSERT INTO "CycleSelfAuto" AS "entity1"("table1Id","name","parentId") VALUES
	(DEFAULT,$2,$1)
RETURNING "entity1"."id""
,
        "type": 3,
      },
      {
        "parameters": 
Map {
          "$1" => 16n,
          "$2" => "7",
        }
,
        "query": 
"INSERT INTO "CycleSelfAuto" AS "entity1"("table1Id","name","parentId") VALUES
	(DEFAULT,$2,$1)
RETURNING "entity1"."id""
,
        "type": 3,
      },
      {
        "parameters": 
Map {
          "$1" => 16n,
          "$2" => "8",
        }
,
        "query": 
"INSERT INTO "CycleSelfAuto" AS "entity1"("table1Id","name","parentId") VALUES
	(DEFAULT,$2,$1)
RETURNING "entity1"."id""
,
        "type": 3,
      },
    ],
    "_query": 
"INSERT INTO "CycleSelfAuto" AS "entity1"("table1Id","name","parentId") VALUES
	(DEFAULT,$2,$1)
RETURNING "entity1"."id";

INSERT INTO "CycleSelfAuto" AS "entity1"("table1Id","name","parentId") VALUES
	(DEFAULT,$4,$3)
RETURNING "entity1"."id";

INSERT INTO "CycleSelfAuto" AS "entity1"("table1Id","name","parentId") VALUES
	(DEFAULT,$6,$5)
RETURNING "entity1"."id""
,
    "_type": 3,
  },
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": 
Map {
      "$1" => 12n,
      "$2" => "3",
      "$3" => 12n,
      "$4" => "4",
    }
,
    "_queries": [
      {
        "parameters": 
Map {
          "$1" => 12n,
          "$2" => "3",
        }
,
        "query": 
"INSERT INTO "CycleSelfAuto" AS "entity2"("table1Id","name","parentId") VALUES
	(DEFAULT,$2,$1)
RETURNING "entity2"."id""
,
        "type": 3,
      },
      {
        "parameters": 
Map {
          "$1" => 12n,
          "$2" => "4",
        }
,
        "query": 
"INSERT INTO "CycleSelfAuto" AS "entity2"("table1Id","name","parentId") VALUES
	(DEFAULT,$2,$1)
RETURNING "entity2"."id""
,
        "type": 3,
      },
    ],
    "_query": 
"INSERT INTO "CycleSelfAuto" AS "entity2"("table1Id","name","parentId") VALUES
	(DEFAULT,$2,$1)
RETURNING "entity2"."id";

INSERT INTO "CycleSelfAuto" AS "entity2"("table1Id","name","parentId") VALUES
	(DEFAULT,$4,$3)
RETURNING "entity2"."id""
,
    "_type": 3,
  },
  {
    "parameters": 
Map {
      "$1" => 13n,
      "$2" => "5",
    }
,
    "query": 
"INSERT INTO "CycleSelfAuto" AS "entity3"("table1Id","name","parentId") VALUES
	(DEFAULT,$2,$1)
RETURNING "entity3"."id""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should update entity 1 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "Updated",
      "$2" => 1n,
    }
,
    "query": 
"UPDATE "Table1One" AS "entity0"
SET "name" = $1
WHERE ("entity0"."table1Id"=$2)"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should update entity 2 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 1n,
      "$2" => "Updated",
      "$3" => 11,
    }
,
    "query": 
"UPDATE "Table1One" AS "entity0"
SET "name" = $2,
	"number" = $3
WHERE ("entity0"."table1Id"=$1)"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should bulk update entity 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "Updated",
    }
,
    "query": 
"UPDATE "Table1One" AS "entity0"
SET "name" = $1,
	"number" = ("entity0"."number"+100)
WHERE ("entity0"."table1Id"=1)"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should bulk update entity with paging 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 100,
      "$2" => 99.99,
      "$3" => 100,
      "$4" => 50,
      "$5" => "Updated",
      "$6" => 100.12,
    }
,
    "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "string" = $5,
	"real" = ("entity0"."real"+$6)
FROM (
	SELECT "entity0"."id"
	FROM "fixture"."Table1s" AS "entity0"
	WHERE (("entity0"."deleted"=false) AND ("entity0"."integer">$1) AND ("entity0"."real" IS NOT DISTINCT FROM $2) AND ((COALESCE("entity0"."real", 0))=$2))
	ORDER BY "entity0"."id"
	OFFSET $3 ROWS
	FETCH NEXT $4 ROWS ONLY
) AS "entity0_1"
WHERE ("entity0"."id"="entity0_1"."id")"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should update with DIRTY concurrency check 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "Updated",
      "$2" => 2n,
      "$3" => "TEST2",
    }
,
    "query": 
"UPDATE "Table1One" AS "entity0"
SET "name" = $1
WHERE (("entity0"."table1Id"=$2) AND ("entity0"."name"=$3))"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should update with VERSION concurrency check 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "Updated",
      "$2" => 1,
      "$3" => Uint8Array [
        1,
        200,
        0,
        0,
        100,
      ],
    }
,
    "query": 
"UPDATE "fixture"."Table2s" AS "entity0"
SET "t2Name" = $1
WHERE (("entity0"."id"=$2) AND ("entity0"."rowVersion"=$3))
RETURNING "entity0"."id","entity0"."rowVersion""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should update with VERSION concurrency check (fallback to ModifiedDate) 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "Updated",
      "$2" => 1n,
      "$3" => "1971-01-02T00:00:00Z",
    }
,
    "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "string" = $1,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
WHERE (("entity0"."id"=$2) AND ("entity0"."modifiedDate"=$3))
RETURNING "entity0"."id",("entity0"."integer"+"entity0"."decimalNumber") AS "computed","entity0"."modifiedDate""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should update without concurrency check 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "Updated",
      "$2" => 1n,
    }
,
    "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "string" = $1,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
WHERE ("entity0"."id"=$2)
RETURNING "entity0"."id",("entity0"."integer"+"entity0"."decimalNumber") AS "computed","entity0"."modifiedDate""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should update ModifiedDate 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "Updated",
      "$2" => 1n,
    }
,
    "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "string" = $1,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
WHERE ("entity0"."id"=$2)
RETURNING "entity0"."id",("entity0"."integer"+"entity0"."decimalNumber") AS "computed","entity0"."modifiedDate""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should not update Readonly Column, ex: CreatedDate 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "Updated",
      "$2" => 1n,
    }
,
    "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "string" = $1,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
WHERE ("entity0"."id"=$2)
RETURNING "entity0"."id",("entity0"."integer"+"entity0"."decimalNumber") AS "computed","entity0"."modifiedDate""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should trigger before/after save event 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "Updated",
      "$2" => 1n,
    }
,
    "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "string" = $1,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
WHERE ("entity0"."id"=$2)
RETURNING "entity0"."id",("entity0"."integer"+"entity0"."decimalNumber") AS "computed","entity0"."modifiedDate""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should update entity with it relation correctly 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 1n,
    }
,
    "query": 
"SELECT "entity0"."id",
	"entity0"."bigint",
	"entity0"."binary",
	"entity0"."boolean",
	"entity0"."date",
	"entity0"."plainDate",
	"entity0"."dateTime",
	"entity0"."instant",
	"entity0"."decimal",
	"entity0"."decimalNumber",
	"entity0"."decimalDecimal",
	"entity0"."deleted",
	"entity0"."identifier",
	"entity0"."identifierString",
	"entity0"."integer",
	"entity0"."real",
	"entity0"."string",
	"entity0"."time",
	"entity0"."plainTime",
	"entity0"."createdDate",
	"entity0"."modifiedDate"
FROM "fixture"."Table1s" AS "entity0"
WHERE (("entity0"."deleted"=false) AND ("entity0"."id"=$1))
ORDER BY "entity0"."id"
FETCH NEXT 1 ROWS ONLY"
,
    "type": 1,
  },
  {
    "parameters": 
Map {
      "$1" => 1n,
      "$2" => 1n,
    }
,
    "query": 
"UPDATE "Table1Manies" AS "entity0"
SET "table1Id" = $1
WHERE ("entity0"."id"=$2)
RETURNING "entity0"."id""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should update relation value to inserted relation entity's identity 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => "INSERT 1",
    }
,
    "query": 
"INSERT INTO "fixture"."Table1s" AS "entity0"("bigint","binary","boolean","date","plainDate","dateTime","instant","decimal","decimalNumber","decimalDecimal","deleted","identifier","identifierString","integer","real","string","time","plainTime") VALUES
	(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,$1,DEFAULT,DEFAULT)
RETURNING "entity0"."id",("entity0"."integer"+"entity0"."decimalNumber") AS "computed","entity0"."createdDate","entity0"."modifiedDate","entity0"."deleted","entity0"."integer""
,
    "type": 3,
  },
  {
    "parameters": 
Map {
      "$1" => Anything,
      "$2" => 1n,
    }
,
    "query": 
"UPDATE "Table1Manies" AS "entity1"
SET "table1Id" = $1
WHERE ("entity1"."id"=$2)
RETURNING "entity1"."id""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION UPDATE should do upsert 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 11,
      "$2" => "Updated",
    }
,
    "query": 
"INSERT INTO "fixture"."Table1s" AS "entity0"("bigint","binary","boolean","date","plainDate","dateTime","instant","decimal","decimalNumber","decimalDecimal","deleted","identifier","identifierString","integer","real","string","time","plainTime") VALUES
	(DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,DEFAULT,$1,DEFAULT,$2,DEFAULT,DEFAULT)ON CONFLICT (id) DO UPDATE
SET "modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC',
	"string" = EXCLUDED."string"
RETURNING "entity0"."id","entity0"."computed" AS "computed","entity0"."createdDate","entity0"."modifiedDate","entity0"."deleted","entity0"."integer""
,
    "type": 3,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should delete entity (soft delete) + should update modifiedDate 1`] = `
[
  {
    "parameters": Map {},
    "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
FROM (
	VALUES
	(1)
) AS "delete"("id")
WHERE ("entity0"."id"="delete"."id") AND ("entity0"."deleted"=false)"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should delete entity (hard delete) 1`] = `
[
  {
    "parameters": Map {},
    "query": 
"DELETE FROM "fixture"."Table1s" AS "entity0"
USING (
	VALUES
	(1)
) AS "delete"("id")
WHERE ("entity0"."id"="delete"."id")"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should delete entity with key (soft delete) 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 1n,
    }
,
    "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
WHERE (("entity0"."deleted"=false) AND ("entity0"."id"=$1))"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should delete entity with key (hard delete) 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 1n,
    }
,
    "query": 
"DELETE FROM "fixture"."Table1s" AS "entity0"
WHERE ("entity0"."id"=$1)"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should bulk delete entity (soft delete) with paging 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 100,
      "$2" => 99.99,
      "$3" => 100,
      "$4" => 50,
    }
,
    "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
FROM (
	SELECT "entity0"."id"
	FROM "fixture"."Table1s" AS "entity0"
	WHERE (("entity0"."deleted"=false) AND ("entity0"."integer">$1) AND ("entity0"."real" IS NOT DISTINCT FROM $2) AND ((COALESCE("entity0"."real", 0))=$2))
	ORDER BY "entity0"."id"
	OFFSET $3 ROWS
	FETCH NEXT $4 ROWS ONLY
) AS "entity0_1"
WHERE ("entity0"."id"="entity0_1"."id")"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should bulk delete entity (hard delete) with paging 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 100,
      "$2" => 99.99,
      "$3" => 100,
      "$4" => 50,
    }
,
    "query": 
"DELETE FROM "fixture"."Table1s" AS "entity0"
USING (
	SELECT "entity0"."id"
	FROM "fixture"."Table1s" AS "entity0"
	WHERE (("entity0"."deleted"=false) AND ("entity0"."integer">$1) AND ("entity0"."real" IS NOT DISTINCT FROM $2) AND ((COALESCE("entity0"."real", 0))=$2))
	ORDER BY "entity0"."id"
	OFFSET $3 ROWS
	FETCH NEXT $4 ROWS ONLY
) AS "entity0_1"
WHERE ("entity0"."id"="entity0_1"."id")"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should bulk delete with include (soft delete) 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": Map {},
    "_queries": [
      {
        "parameters": Map {},
        "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
WHERE (("entity0"."deleted"=false) AND ("entity0"."id"=1))"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE "Table1Manies" AS "entity1"
SET "deleted" = true
FROM (
	SELECT "entity0"."id"
	FROM "fixture"."Table1s" AS "entity0"
	WHERE (("entity0"."deleted"=false) AND ("entity0"."id"=1))
) AS "entity0"
WHERE ("entity0"."id"="entity1"."table1Id") AND ("entity1"."deleted"=false)"
,
        "type": 2,
      },
    ],
    "_query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
WHERE (("entity0"."deleted"=false) AND ("entity0"."id"=1));

UPDATE "Table1Manies" AS "entity1"
SET "deleted" = true
FROM (
	SELECT "entity0"."id"
	FROM "fixture"."Table1s" AS "entity0"
	WHERE (("entity0"."deleted"=false) AND ("entity0"."id"=1))
) AS "entity0"
WHERE ("entity0"."id"="entity1"."table1Id") AND ("entity1"."deleted"=false)"
,
    "_type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should bulk delete with include (hard delete) 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": Map {},
    "_queries": [
      {
        "parameters": Map {},
        "query": 
"DELETE FROM "fixture"."Table1s" AS "entity0"
WHERE (("entity0"."deleted"=false) AND ("entity0"."id"=1))"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"DELETE FROM "Table1Manies" AS "entity1"
USING (
	SELECT "entity0"."id",
		"entity0"."bigint",
		"entity0"."binary",
		"entity0"."boolean",
		"entity0"."date",
		"entity0"."plainDate",
		"entity0"."dateTime",
		"entity0"."instant",
		"entity0"."decimal",
		"entity0"."decimalNumber",
		"entity0"."decimalDecimal",
		"entity0"."deleted",
		"entity0"."identifier",
		"entity0"."identifierString",
		"entity0"."integer",
		"entity0"."real",
		"entity0"."string",
		"entity0"."time",
		"entity0"."plainTime",
		"entity0"."createdDate",
		"entity0"."modifiedDate"
	FROM "fixture"."Table1s" AS "entity0"
	WHERE (("entity0"."deleted"=false) AND ("entity0"."id"=1))
) AS "entity0"
WHERE ("entity0"."id"="entity1"."table1Id") AND ("entity1"."deleted"=false)"
,
        "type": 2,
      },
    ],
    "_query": 
"DELETE FROM "fixture"."Table1s" AS "entity0"
WHERE (("entity0"."deleted"=false) AND ("entity0"."id"=1));

DELETE FROM "Table1Manies" AS "entity1"
USING (
	SELECT "entity0"."id",
		"entity0"."bigint",
		"entity0"."binary",
		"entity0"."boolean",
		"entity0"."date",
		"entity0"."plainDate",
		"entity0"."dateTime",
		"entity0"."instant",
		"entity0"."decimal",
		"entity0"."decimalNumber",
		"entity0"."decimalDecimal",
		"entity0"."deleted",
		"entity0"."identifier",
		"entity0"."identifierString",
		"entity0"."integer",
		"entity0"."real",
		"entity0"."string",
		"entity0"."time",
		"entity0"."plainTime",
		"entity0"."createdDate",
		"entity0"."modifiedDate"
	FROM "fixture"."Table1s" AS "entity0"
	WHERE (("entity0"."deleted"=false) AND ("entity0"."id"=1))
) AS "entity0"
WHERE ("entity0"."id"="entity1"."table1Id") AND ("entity1"."deleted"=false)"
,
    "_type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should not cascade delete entity when not enabled (soft delete) 1`] = `
[
  {
    "parameters": Map {},
    "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
FROM (
	VALUES
	(1)
) AS "delete"("id")
WHERE ("entity0"."id"="delete"."id") AND ("entity0"."deleted"=false)"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should cascade delete entity + relation (soft delete) 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": Map {},
    "_queries": [
      {
        "query": "DROP TABLE IF EXISTS pg_temp."delete"",
        "type": 36,
      },
      {
        "query": 
"CREATE TEMPORARY TABLE pg_temp."delete"
(
	"id" bigint
)"
,
        "type": 36,
      },
      {
        "parameters": Map {},
        "query": 
"INSERT INTO pg_temp."delete" AS "delete"("id") VALUES
	(1)"
,
        "type": 34,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
FROM pg_temp."delete" AS "delete"
WHERE ("entity0"."id"="delete"."id") AND ("entity0"."deleted"=false)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE "Table1Manies" AS "entity1"
SET "deleted" = true
FROM (
	SELECT "entity0"."id"
	FROM "fixture"."Table1s" AS "entity0"
	INNER JOIN pg_temp."delete" AS "delete" ON ("entity0"."id"="delete"."id")
	WHERE ("entity0"."deleted"=false)
) AS "entity0"
WHERE ("entity0"."id"="entity1"."table1Id") AND ("entity1"."deleted"=false)"
,
        "type": 2,
      },
    ],
    "_query": 
"DROP TABLE IF EXISTS pg_temp."delete";

CREATE TEMPORARY TABLE pg_temp."delete"
(
	"id" bigint
);

INSERT INTO pg_temp."delete" AS "delete"("id") VALUES
	(1);

UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
FROM pg_temp."delete" AS "delete"
WHERE ("entity0"."id"="delete"."id") AND ("entity0"."deleted"=false);

UPDATE "Table1Manies" AS "entity1"
SET "deleted" = true
FROM (
	SELECT "entity0"."id"
	FROM "fixture"."Table1s" AS "entity0"
	INNER JOIN pg_temp."delete" AS "delete" ON ("entity0"."id"="delete"."id")
	WHERE ("entity0"."deleted"=false)
) AS "entity0"
WHERE ("entity0"."id"="entity1"."table1Id") AND ("entity1"."deleted"=false)"
,
    "_type": 38,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should delete with SET NULL option (soft delete) 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": Map {},
    "_queries": [
      {
        "query": "DROP TABLE IF EXISTS pg_temp."delete"",
        "type": 36,
      },
      {
        "query": 
"CREATE TEMPORARY TABLE pg_temp."delete"
(
	"id" bigint
)"
,
        "type": 36,
      },
      {
        "parameters": Map {},
        "query": 
"INSERT INTO pg_temp."delete" AS "delete"("id") VALUES
	(1)"
,
        "type": 34,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
FROM pg_temp."delete" AS "delete"
WHERE ("entity0"."id"="delete"."id") AND ("entity0"."deleted"=false)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE "Table1Manies" AS "entity1"
SET "table1Id" = NULL
FROM (
	SELECT "entity0"."id"
	FROM "fixture"."Table1s" AS "entity0"
	INNER JOIN pg_temp."delete" AS "delete" ON ("entity0"."id"="delete"."id")
	WHERE ("entity0"."deleted"=false)
) AS "entity0"
WHERE ("entity0"."id"="entity1"."table1Id")"
,
        "type": 2,
      },
    ],
    "_query": 
"DROP TABLE IF EXISTS pg_temp."delete";

CREATE TEMPORARY TABLE pg_temp."delete"
(
	"id" bigint
);

INSERT INTO pg_temp."delete" AS "delete"("id") VALUES
	(1);

UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
FROM pg_temp."delete" AS "delete"
WHERE ("entity0"."id"="delete"."id") AND ("entity0"."deleted"=false);

UPDATE "Table1Manies" AS "entity1"
SET "table1Id" = NULL
FROM (
	SELECT "entity0"."id"
	FROM "fixture"."Table1s" AS "entity0"
	INNER JOIN pg_temp."delete" AS "delete" ON ("entity0"."id"="delete"."id")
	WHERE ("entity0"."deleted"=false)
) AS "entity0"
WHERE ("entity0"."id"="entity1"."table1Id")"
,
    "_type": 38,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should delete with SET DEFAULT option (soft delete) 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": Map {},
    "_queries": [
      {
        "query": "DROP TABLE IF EXISTS pg_temp."delete"",
        "type": 36,
      },
      {
        "query": 
"CREATE TEMPORARY TABLE pg_temp."delete"
(
	"id" bigint
)"
,
        "type": 36,
      },
      {
        "parameters": Map {},
        "query": 
"INSERT INTO pg_temp."delete" AS "delete"("id") VALUES
	(1)"
,
        "type": 34,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
FROM pg_temp."delete" AS "delete"
WHERE ("entity0"."id"="delete"."id") AND ("entity0"."deleted"=false)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE "Table1Manies" AS "entity1"
SET "table1Id" = 0
FROM (
	SELECT "entity0"."id"
	FROM "fixture"."Table1s" AS "entity0"
	INNER JOIN pg_temp."delete" AS "delete" ON ("entity0"."id"="delete"."id")
	WHERE ("entity0"."deleted"=false)
) AS "entity0"
WHERE ("entity0"."id"="entity1"."table1Id")"
,
        "type": 2,
      },
    ],
    "_query": 
"DROP TABLE IF EXISTS pg_temp."delete";

CREATE TEMPORARY TABLE pg_temp."delete"
(
	"id" bigint
);

INSERT INTO pg_temp."delete" AS "delete"("id") VALUES
	(1);

UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
FROM pg_temp."delete" AS "delete"
WHERE ("entity0"."id"="delete"."id") AND ("entity0"."deleted"=false);

UPDATE "Table1Manies" AS "entity1"
SET "table1Id" = 0
FROM (
	SELECT "entity0"."id"
	FROM "fixture"."Table1s" AS "entity0"
	INNER JOIN pg_temp."delete" AS "delete" ON ("entity0"."id"="delete"."id")
	WHERE ("entity0"."deleted"=false)
) AS "entity0"
WHERE ("entity0"."id"="entity1"."table1Id")"
,
    "_type": 38,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should trigger before/after delete event 1`] = `
[
  {
    "parameters": Map {},
    "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
FROM (
	VALUES
	(1)
) AS "delete"("id")
WHERE ("entity0"."id"="delete"."id") AND ("entity0"."deleted"=false)"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION DELETE should delete with correct order 1`] = `
[
  BatchedQuery {
    "_isProcessed": true,
    "_parameters": Map {},
    "_queries": [
      {
        "parameters": Map {},
        "query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
FROM (
	VALUES
	(10)
) AS "delete"("id")
WHERE ("entity0"."id"="delete"."id") AND ("entity0"."deleted"=false)"
,
        "type": 2,
      },
      {
        "parameters": Map {},
        "query": 
"UPDATE "Table1Manies" AS "entity1"
SET "deleted" = true
FROM (
	VALUES
	(1)
) AS "delete"("id")
WHERE ("entity1"."id"="delete"."id") AND ("entity1"."deleted"=false)"
,
        "type": 2,
      },
    ],
    "_query": 
"UPDATE "fixture"."Table1s" AS "entity0"
SET "deleted" = true,
	"modifiedDate" = CURRENT_TIMESTAMP AT TIME ZONE 'UTC'
FROM (
	VALUES
	(10)
) AS "delete"("id")
WHERE ("entity0"."id"="delete"."id") AND ("entity0"."deleted"=false);

UPDATE "Table1Manies" AS "entity1"
SET "deleted" = true
FROM (
	VALUES
	(1)
) AS "delete"("id")
WHERE ("entity1"."id"="delete"."id") AND ("entity1"."deleted"=false)"
,
    "_type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION SAVE should unblock insert unique constraint hard delete: set null 1`] = `
[
  {
    "parameters": Map {},
    "query": 
"UPDATE "Unblock" AS "entity0"
SET "unique" = (
	CASE WHEN ((("update"."__flag"&1)=0)) 
	THEN "entity0"."unique"
	ELSE "update"."unique"
	END
)
FROM (
	VALUES
	(10, NULL, 1)
) AS "update"("_ori_id", "unique", "__flag")
WHERE ("entity0"."id"="update"."_ori_id")"
,
    "type": 2,
  },
  {
    "parameters": 
Map {
      "$1" => 11n,
      "$2" => 0n,
      "$3" => "new",
    }
,
    "query": 
"INSERT INTO "Unblock" AS "entity1"("id","unique","name","deleted") VALUES
	($1,$2,$3,DEFAULT)
RETURNING "entity1"."id","entity1"."deleted""
,
    "type": 3,
  },
  {
    "parameters": Map {},
    "query": 
"DELETE FROM "Unblock" AS "entity2"
USING (
	VALUES
	(10)
) AS "delete"("id")
WHERE ("entity2"."id"="delete"."id")"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION SAVE should unblock insert unique constraint: set new value 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 11n,
      "$2" => 0n,
      "$3" => "new",
    }
,
    "query": 
"INSERT INTO "Unblock" AS "entity1"("id","unique","name","deleted") VALUES
	($1,$2,$3,DEFAULT)
RETURNING "entity1"."id","entity1"."deleted""
,
    "type": 3,
  },
  {
    "parameters": Map {},
    "query": 
"UPDATE "Unblock" AS "entity2"
SET "deleted" = true
FROM (
	VALUES
	(10)
) AS "delete"("id")
WHERE ("entity2"."id"="delete"."id") AND ("entity2"."deleted"=false)"
,
    "type": 2,
  },
]
`;

exports[`Postgresql DATA MANIPULATION SAVE should unblock insert unique constraint: ignore 1`] = `
[
  {
    "parameters": 
Map {
      "$1" => 11n,
      "$2" => 0n,
      "$3" => "new",
    }
,
    "query": 
"INSERT INTO "Unblock" AS "entity1"("id","unique","name","deleted") VALUES
	($1,$2,$3,DEFAULT)
RETURNING "entity1"."id","entity1"."deleted""
,
    "type": 3,
  },
  {
    "parameters": Map {},
    "query": 
"UPDATE "Unblock" AS "entity2"
SET "deleted" = true
FROM (
	VALUES
	(10)
) AS "delete"("id")
WHERE ("entity2"."id"="delete"."id") AND ("entity2"."deleted"=false)"
,
    "type": 2,
  },
]
`;
